--- a/scripts/sup_figure2/sup_figure2c_tumor_cells_Hmatrix.Rmd
+++ b/scripts/sup_figure2/sup_figure2c_tumor_cells_Hmatrix.Rmd
@@ -10,9 +10,9 @@ output:
     number_sections: false
 params:
   annot_tumor   : "path/to/metadata"
-  annot_cells   : "path/to/metadata"
-  hmatrix_wnorm : "path/to/data"
-  sup_figure2c  : "results/figures/..."
+  annot_cells   : "annotation/annotation_cells.RDS"
+  hmatrix_wnorm : "analysis/tumor_cells/chipseq/H3K27ac/NMF/tumor_cells_consensusSE_K5_Hmatrix_wnorm.RDS"
+  sup_figure2c  : "results/sup_figure2/sup_figure2c_tumor_cells_SE_hmatrix.pdf"
 editor_options: 
   chunk_output_type: console
 ---
@@ -45,7 +45,12 @@ Read NMF object
 norm.nmf.hmatrix <- readRDS(params$hmatrix_wnorm)
 
 # read annotation 
-annot_tumor <- readRDS(params$annot_tumor)
+#annot_tumor <- readRDS(params$annot_tumor)
+annot_tumor <- readRDS("annotation/annotation_tumor_with_external_phenoData.RDS")
+annot_tumor <- annot_tumor %>% 
+  mutate(Risk = if_else(Risk == "IR" | Risk == "LR", "LR/IR", Risk))
+
+
 annot_cells <- readRDS(params$annot_cells)
 
 annot <- bind_rows(annot_tumor, annot_cells)
@@ -64,6 +69,7 @@ type.colVector <- list(Type    = c("Tumor"="grey80", "Metastasis"="grey60", "Cel
                        MYCN    = c("Amp"="grey20", "NonAmp"="grey80", "NA"="white"),
                        Stage   = c("4"="grey20", "1-3;4S"="grey80", "NA"="white"),
                        Age     = c(">18mo"="grey20", "<18mo"="grey80", "NA"="white"),
+                       Risk     = c("HR"="grey20", "LR/IR"="grey80", "NA"="white"),
                        Relapse = c("Yes"="grey20", "No"="grey80", "NA"="grey100"))
 
 #Heatmap annotation
@@ -71,6 +77,7 @@ heat.anno <- HeatmapAnnotation(df = data.frame(Type    = annot$Type,
                                                MYCN    = annot$MYCN,
                                                Stage   = annot$Stage,
                                                Age     = annot$Age,
+                                               Risk    = annot$Risk,
                                                Relapse = annot$Relapse),
                                col = type.colVector,
                                show_annotation_name = TRUE, na_col = "white")
