--- a/scripts/sup_figure2/sup_figure2e_tumor_mostVariable_heatmap.Rmd
+++ b/scripts/sup_figure2/sup_figure2e_tumor_mostVariable_heatmap.Rmd
@@ -47,7 +47,8 @@ library(viridis)
 # read normalized matrix
 norm.mat <- readRDS(params$matrix)
 # read annotation 
-annot <- readRDS(params$annot_tumor)
+#annot <- readRDS(params$annot_tumor)
+annot <- readRDS("annotation/annotation_tumor_with_external_phenoData.RDS")
 annot  <- annot[match(colnames(norm.mat), annot$ProjectID),]
 
 # Read SE Granges
@@ -61,6 +62,7 @@ rownames(norm.mat) <- sapply(strsplit(rownames(norm.mat), "\\|"), "[[", 1)
 # number of genes equal to the number of SE target genes
 ntop <- length(unique(SE$target_ENSEMBL))
 # Find most variable genes
+library(matrixStats)
 rv <- rowVars(norm.mat)
 select <- order(rv, decreasing = TRUE)[seq_len(min(ntop, length(rv)))]
 # norm.mat <- norm.mat[select,]
@@ -146,13 +148,16 @@ colscale_quant <- function(x, prob = 0.01) {
                            length.out = 100), 
                        viridis(100))
 }
+annot <- annot %>% 
+  mutate(Risk = if_else(Risk == "IR" | Risk == "LR", "LR/IR", Risk))
 
 
 #Annotation for H matrix heatmap
-type.colVector <- list(Type    = c("Tumor"="grey80", "Metastasis"="grey60", "Cell line"="grey20", "NA"="white"),
+type.colVector <- list(#Type    = c("Tumor"="grey80", "Metastasis"="grey60", "Cell line"="grey20", "NA"="white"),
                        MYCN    = c("Amp"="grey20", "NonAmp"="grey80", "NA"="white"),
                        Stage   = c("4"="grey20", "1-3;4S"="grey80", "NA"="white"),
                        Age     = c(">18mo"="grey20", "<18mo"="grey80", "NA"="white"),
+                       Risk     = c("HR"="grey20", "LR/IR"="grey80", "NA"="white"),
                        Relapse = c("Yes"="grey20", "No"="grey80", "NA"="grey100"),
                        NMF_MYCN= colscale_quant(annot$NMF_MYCN,prob = 0.0), 
                        NMF_MES = colscale_quant(annot$NMF_MES, prob = 0.0), 
@@ -161,10 +166,11 @@ type.colVector <- list(Type    = c("Tumor"="grey80", "Metastasis"="grey60", "Cel
                        NMF_sign= setNames(inferno(length(unique(annot$NMF_sign))), unique(annot$NMF_sign)))
 
 #Heatmap annotation
-heat.anno <- HeatmapAnnotation(df = data.frame(Type    = annot$Type,
+heat.anno <- HeatmapAnnotation(df = data.frame(#Type    = annot$Type,
                                                MYCN    = annot$MYCN,
                                                Stage   = annot$Stage,
                                                Age     = annot$Age,
+                                               Risk    = annot$Risk,
                                                Relapse = annot$Relapse,
                                                NMF_MYCN= annot$NMF_MYCN,
                                                NMF_MES = annot$NMF_MES,
@@ -174,7 +180,6 @@ heat.anno <- HeatmapAnnotation(df = data.frame(Type    = annot$Type,
                                                check.names = FALSE),
                                col = type.colVector,
                                show_annotation_name = TRUE, na_col = "white")
-
 
 
 ```
