--- a/scripts/supptables/make_supptables.Rmd
+++ b/scripts/supptables/make_supptables.Rmd
@@ -103,7 +103,8 @@ paste_rownames <- function(x, colID){
 ##                          S1_annotation                                     ##
 ##––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––##
 
-annot_t <- readRDS(params$annot_t)
+#annot_t <- readRDS(params$annot_t)
+annot_t <- readRDS("annotation/annotation_tumor_with_external_phenoData.RDS")
 annot_c <- readRDS(params$annot_c)
 purity_t <- read.csv(params$purity_t)
 
