n samples comparison MES ADRN

--- a/scripts/figure3/Enhancer_Comparison_using_HiChIP.Rmd
+++ b/scripts/figure3/Enhancer_Comparison_using_HiChIP.Rmd
@@ -168,6 +168,9 @@ tumor_mes <- assign_signature(tumor_h)["MES",]
 cells_mes
 tumor_mes
 
+table(cells_mes)
+table(tumor_mes)
+
 ##––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––##
 ##                                  DIFFBIND                                  ##
 ##––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––##
